--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "giveaway-bot",
+  "name": "discord-giveaway-bot",
   "version": "1.0.0",
-  "description": "A bot to manage game code giveaways on Discord.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "discord.js": "^14.0.0",
-    "dotenv": "^16.0.0",
-    "fs": "^0.0.1-security"
-  },
-  "devDependencies": {},
-  "author": "Your Name",
-  "license": "ISC"
+    "dotenv": "^16.0.0"
+  }
 }
